--- a/admin.html
+++ b/admin.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>管理者画面</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
     body { font-family: sans-serif; padding: 20px; }
 
@@ -34,21 +35,25 @@
       background-color: #f0f0f0;
     }
 
+    /* ✔ チェック欄 */
     th:first-child,
     td:first-child {
       width: 30px;
     }
 
+    /* 名前欄 */
     th:nth-child(2),
     td:nth-child(2) {
       width: 120px;
       text-align: left;
     }
 
+    /* 回答欄（時間が入る幅） */
     td, th {
       min-width: 120px;
     }
 
+    /* 備考欄（別テーブル） */
     .note-table td:last-child,
     .note-table th:last-child {
       width: 200px;
@@ -63,14 +68,15 @@
       margin-top: 20px;
     }
 
+    /* ゼブラストライプ */
     table tbody tr:nth-child(even) {
-      background-color: #f9f9f9;
+      background-color: #b9e5f8e0;
     }
   </style>
 </head>
 <body>
   <script>
-    const password = "admin1234";
+    const password = "na4575";
     const input = prompt("管理者パスワードを入力してください：");
     if (input !== password) {
       alert("パスワードが正しくありません。");
@@ -78,23 +84,23 @@
     }
   </script>
 
-  <h1>アンケート集計（管理者画面）</h1>
+  <h1>南口シフト</h1>
 
   <h3>アンケート対象期間</h3>
-  <label>開始日: <input type="date" id="startDate" /></label>
-  <label>終了日: <input type="date" id="endDate" /></label>
+  <label>開始日: <input type="date" id="startDate"></label>
+  <label>終了日: <input type="date" id="endDate"></label>
   <button onclick="saveRange()">期間を保存</button>
   <p id="rangeSaved" style="color: green;"></p>
 
   <div class="controls">
-    <button onclick="exportCSV()">CSV出力</button>
+    <button onclick="exportCSV()">Excelダウンロード</button>
     <button onclick="deleteSelected()">選択した回答を削除</button>
     <button onclick="deleteAll()">すべての回答を削除</button>
   </div>
 
   <div id="tableContainer" class="table-wrapper"></div>
 
-  <!-- Firebaseモジュール -->
+
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
     import {
@@ -120,6 +126,7 @@
     const db = getDatabase(app);
     const dbRef = ref(db, "responses");
 
+
     const weekdays = ["月", "火", "水", "木", "金", "土", "日"];
 
     function saveRange() {
@@ -141,9 +148,11 @@
       while (current <= last) {
         const iso = current.toISOString().split("T")[0];
         const day = current.getDate();
-        let jsDow = current.getDay();
-        const dow = (jsDow === 0) ? 6 : jsDow - 1;
+
+        let jsDow = current.getDay(); // 日曜=0
+        const dow = (jsDow === 0) ? 6 : jsDow - 1; // 月曜=0
         const youbi = weekdays[dow];
+
         dateArray.push({ iso, day, youbi, dow });
         current.setDate(current.getDate() + 1);
       }
@@ -153,6 +162,7 @@
     function splitWeeks(dates) {
       const weeks = [];
       let week = [];
+
       dates.forEach(date => {
         if (week.length === 0 && date.dow !== 0) {
           for (let i = 0; i < date.dow; i++) week.push(null);
@@ -163,10 +173,12 @@
           week = [];
         }
       });
+
       if (week.length > 0 && week.length < 7) {
         while (week.length < 7) week.push(null);
         weeks.push(week);
       }
+
       return weeks;
     }
 
@@ -218,12 +230,12 @@
         table.appendChild(thead);
 
         const tbody = document.createElement("tbody");
-        data.forEach(entry => {
+        data.forEach((entry, index) => {
           const row = document.createElement("tr");
 
           const checkbox = document.createElement("td");
           if (weekIndex === 0) {
-            checkbox.innerHTML = `<input type="checkbox" class="deleteCheckbox" data-key="${entry._key}">`;
+            checkbox.innerHTML = `<input type="checkbox" class="deleteCheckbox" data-index="${entry._key}">`;
           }
           row.appendChild(checkbox);
 
@@ -245,6 +257,7 @@
         container.appendChild(table);
       });
 
+      // 備考
       const notes = data.filter(e => e.note && e.note.trim());
       if (notes.length > 0) {
         const table = document.createElement("table");
@@ -261,7 +274,7 @@
           const row = document.createElement("tr");
 
           const check = document.createElement("td");
-          check.innerHTML = `<input type="checkbox" class="deleteCheckbox" data-key="${e._key}">`;
+          check.innerHTML = `<input type="checkbox" class="deleteCheckbox" data-index="${e._key}">`;
           row.appendChild(check);
 
           const name = document.createElement("td");
@@ -285,15 +298,16 @@
       const checkboxes = document.querySelectorAll(".deleteCheckbox:checked");
       if (!checkboxes.length) return alert("削除対象が選択されていません。");
       if (!confirm("本当に削除しますか？")) return;
+
       checkboxes.forEach(cb => {
-        const key = cb.dataset.key;
-        remove(ref(db, "responses/" + key));
+        const key = cb.dataset.index;
+        db.ref("responses/" + key).remove();
       });
     }
 
     function deleteAll() {
       if (confirm("すべての回答を削除しますか？")) {
-        remove(dbRef);
+        db.ref("responses").remove();
       }
     }
 
@@ -305,9 +319,9 @@
       const header = ["名前", ...dates.map(d => `${d.day}(${d.youbi})`), "備考"];
       const rows = [header];
 
-      get(dbRef).then(snapshot => {
+      db.ref("responses").once("value").then(snapshot => {
         const data = snapshot.val() || {};
-        Object.entries(data).forEach(([key, entry]) => {
+        Object.values(data).forEach(entry => {
           const row = [entry.name];
           dates.forEach(d => {
             row.push(formatTime(entry.answers?.[d.iso]));
@@ -327,14 +341,15 @@
     }
 
     function fetchData() {
-      onValue(dbRef, snapshot => {
+      db.ref("responses").on("value", (snapshot) => {
         const data = snapshot.val() || {};
-        const arr = Object.entries(data).map(([key, val]) => ({ ...val, _key: key }));
+        const arr = Object.entries(data).map(([key, value]) => ({ ...value, _key: key }));
         renderTableFromData(arr);
       });
     }
 
-    fetchData();
+    fetchData(); // 初回表示
   </script>
+
 </body>
 </html>
