--- a/admin.html
+++ b/admin.html
@@ -2,25 +2,21 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>管理者画面</title>
+  <title>南口シフト - 管理者画面</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <style>
-    body { font-family: sans-serif; padding: 20px; }
-
+    body { font-family: sans-serif; padding: 20px; text-align: center; }
+    h1 { margin-bottom: 30px; }
     .table-wrapper {
       overflow-x: auto;
       width: 100%;
     }
-
     table {
       border-collapse: collapse;
-      width: 100%;
-      margin-bottom: 40px;
+      margin: 20px auto;
       table-layout: fixed;
       min-width: 900px;
     }
-
     th, td {
       border: 1px solid #ccc;
       padding: 6px;
@@ -30,48 +26,34 @@
       text-overflow: ellipsis;
       white-space: nowrap;
     }
-
     th {
       background-color: #f0f0f0;
     }
-
-    /* ✔ チェック欄 */
-    th:first-child,
-    td:first-child {
+    th:first-child, td:first-child {
       width: 30px;
     }
-
-    /* 名前欄 */
-    th:nth-child(2),
-    td:nth-child(2) {
+    th:nth-child(2), td:nth-child(2) {
       width: 120px;
       text-align: left;
     }
-
-    /* 回答欄（時間が入る幅） */
     td, th {
       min-width: 120px;
     }
-
-    /* 備考欄（別テーブル） */
     .note-table td:last-child,
     .note-table th:last-child {
       width: 200px;
       text-align: left;
     }
-
     .name-col {
       font-weight: bold;
     }
-
     .controls {
       margin-top: 20px;
     }
-
-    /* ゼブラストライプ */
     table tbody tr:nth-child(even) {
       background-color: #b9e5f8e0;
     }
+    label { margin: 0 10px; }
   </style>
 </head>
 <body>
@@ -84,32 +66,28 @@
     }
   </script>
 
-  <h1>南口シフト</h1>
+  <h1>南口シフト（管理者画面）</h1>
 
-  <h3>アンケート対象期間</h3>
-  <label>開始日: <input type="date" id="startDate"></label>
-  <label>終了日: <input type="date" id="endDate"></label>
-  <button onclick="saveRange()">期間を保存</button>
-  <p id="rangeSaved" style="color: green;"></p>
+  <div>
+    <label>開始日: <input type="date" id="startDate"></label>
+    <label>終了日: <input type="date" id="endDate"></label>
+    <button id="saveBtn">期間を保存</button>
+    <p id="rangeSaved" style="color: green;"></p>
+  </div>
 
   <div class="controls">
-    <button onclick="exportCSV()">Excelダウンロード</button>
-    <button onclick="deleteSelected()">選択した回答を削除</button>
-    <button onclick="deleteAll()">すべての回答を削除</button>
+    <button id="exportBtn">Excelダウンロード</button>
+    <button id="deleteSelBtn">選択した回答を削除</button>
+    <button id="deleteAllBtn">すべての回答を削除</button>
   </div>
 
   <div id="tableContainer" class="table-wrapper"></div>
 
-
+  <!-- Firebase SDK -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
     import {
-      getDatabase,
-      ref,
-      onValue,
-      remove,
-      get,
-      child
+      getDatabase, ref, onValue, remove, get, push
     } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-database.js";
 
     const firebaseConfig = {
@@ -125,17 +103,12 @@
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
     const dbRef = ref(db, "responses");
-
-
     const weekdays = ["月", "火", "水", "木", "金", "土", "日"];
 
     function saveRange() {
       const start = document.getElementById("startDate").value;
       const end = document.getElementById("endDate").value;
-      if (!start || !end) {
-        alert("開始日と終了日を入力してください。");
-        return;
-      }
+      if (!start || !end) return alert("開始日と終了日を入力してください。");
       localStorage.setItem("surveyRange", JSON.stringify({ start, end }));
       document.getElementById("rangeSaved").textContent = `保存されました：${start} ～ ${end}`;
       fetchData();
@@ -148,11 +121,8 @@
       while (current <= last) {
         const iso = current.toISOString().split("T")[0];
         const day = current.getDate();
-
-        let jsDow = current.getDay(); // 日曜=0
-        const dow = (jsDow === 0) ? 6 : jsDow - 1; // 月曜=0
+        const dow = (current.getDay() + 6) % 7;
         const youbi = weekdays[dow];
-
         dateArray.push({ iso, day, youbi, dow });
         current.setDate(current.getDate() + 1);
       }
@@ -162,7 +132,6 @@
     function splitWeeks(dates) {
       const weeks = [];
       let week = [];
-
       dates.forEach(date => {
         if (week.length === 0 && date.dow !== 0) {
           for (let i = 0; i < date.dow; i++) week.push(null);
@@ -173,12 +142,10 @@
           week = [];
         }
       });
-
       if (week.length > 0 && week.length < 7) {
         while (week.length < 7) week.push(null);
         weeks.push(week);
       }
-
       return weeks;
     }
 
@@ -196,7 +163,6 @@
     function renderTableFromData(data) {
       const container = document.getElementById("tableContainer");
       container.innerHTML = "";
-
       const range = JSON.parse(localStorage.getItem("surveyRange") || "null");
       if (!range) {
         container.innerHTML = "<p>期間が設定されていません。</p>";
@@ -230,12 +196,12 @@
         table.appendChild(thead);
 
         const tbody = document.createElement("tbody");
-        data.forEach((entry, index) => {
+        data.forEach(entry => {
           const row = document.createElement("tr");
 
           const checkbox = document.createElement("td");
           if (weekIndex === 0) {
-            checkbox.innerHTML = `<input type="checkbox" class="deleteCheckbox" data-index="${entry._key}">`;
+            checkbox.innerHTML = `<input type="checkbox" class="deleteCheckbox" data-key="${entry._key}">`;
           }
           row.appendChild(checkbox);
 
@@ -274,7 +240,7 @@
           const row = document.createElement("tr");
 
           const check = document.createElement("td");
-          check.innerHTML = `<input type="checkbox" class="deleteCheckbox" data-index="${e._key}">`;
+          check.innerHTML = `<input type="checkbox" class="deleteCheckbox" data-key="${e._key}">`;
           row.appendChild(check);
 
           const name = document.createElement("td");
@@ -298,16 +264,15 @@
       const checkboxes = document.querySelectorAll(".deleteCheckbox:checked");
       if (!checkboxes.length) return alert("削除対象が選択されていません。");
       if (!confirm("本当に削除しますか？")) return;
-
       checkboxes.forEach(cb => {
-        const key = cb.dataset.index;
-        db.ref("responses/" + key).remove();
+        const key = cb.dataset.key;
+        remove(ref(db, "responses/" + key));
       });
     }
 
     function deleteAll() {
       if (confirm("すべての回答を削除しますか？")) {
-        db.ref("responses").remove();
+        remove(ref(db, "responses"));
       }
     }
 
@@ -319,9 +284,9 @@
       const header = ["名前", ...dates.map(d => `${d.day}(${d.youbi})`), "備考"];
       const rows = [header];
 
-      db.ref("responses").once("value").then(snapshot => {
+      get(dbRef).then(snapshot => {
         const data = snapshot.val() || {};
-        Object.values(data).forEach(entry => {
+        Object.entries(data).forEach(([key, entry]) => {
           const row = [entry.name];
           dates.forEach(d => {
             row.push(formatTime(entry.answers?.[d.iso]));
@@ -341,15 +306,20 @@
     }
 
     function fetchData() {
-      db.ref("responses").on("value", (snapshot) => {
+      onValue(dbRef, snapshot => {
         const data = snapshot.val() || {};
-        const arr = Object.entries(data).map(([key, value]) => ({ ...value, _key: key }));
+        const arr = Object.entries(data).map(([key, val]) => ({ ...val, _key: key }));
         renderTableFromData(arr);
       });
     }
 
-    fetchData(); // 初回表示
-  </script>
+    // ✅ イベントバインド（ボタンが反応しない対策）
+    document.getElementById("saveBtn").addEventListener("click", saveRange);
+    document.getElementById("exportBtn").addEventListener("click", exportCSV);
+    document.getElementById("deleteSelBtn").addEventListener("click", deleteSelected);
+    document.getElementById("deleteAllBtn").addEventListener("click", deleteAll);
 
+    fetchData();
+  </script>
 </body>
 </html>
